# pytdml

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  LICENSE  README.md  encoding_config_schema.yml  main.py  main_update.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: pre-commit.yml  tests.yml
datalibrary/: __init__.py  datasetcollection.py  downloader.py  pipeline.py  s3Client.py  util.py
examples/: requirements.txt
examples/object_detection/: train.py
examples/scene_classification/: train.py  whu_rs19.json  whurs19_json_writer.py  whurs19_json_writer_from_s3.py
examples/semantic_segmentation/: train.py
examples/yaml/: SpaceNet7.yml  SpanceNet7.yml  dataset_schema.yml  dota_v1.yml  gid_5c.yml  uit_hcd_california_2017.yml  whu_rs19.yml
pytdml/: __init__.py  basic_types.py  config.py  convert_utils.py  extended_types.py  ml_operators.py  tdml_image_crop.py  tdml_readers.py  tdml_torch.py  tdml_writers.py  utils.py  yaml_to_tdml.py
pytdml/io/: S3_reader.py  __init__.py  coco_converter.py  internal.py  stac_converter.py  tdml_readers.py  tdml_writers.py  version_converter.py  yaml_converter.py
pytdml/ml/: __init__.py  ml_operators.py  object_transforms.py  tdml_image_crop.py  tdml_tensorflow.py  tdml_torch.py  tdml_torch_data_pipe.py  utils.py
pytdml/type/: UiT_HCD_California_2017.json  UiT_HCD_California_2017.yml  __init__.py  _utils.py  all_types.py  basic_types.py  basic_types_old.py  (+3 more)
tests/: __init__.py  test_all_types.py  test_basic_types.py  test_pipeline.py  test_tdml_io.py  test_tdml_torch.py
(+21 files in other folders)
